# acme-health

./: .coderabbit.yaml  .gitignore  ARCHITECTURE.md  AcmeHealth.slnx  README.md  justfile  lefthook.yml
.github/workflows/: quality.yml
data/: README.md
data/cgm/: README.md  sample.csv
data/mtsamples/: README.md
data/scripts/: download-samples.sh
data/synthea/: README.md  sample.json
docs/adr/: 0001-polyglot-aspire-orchestration.md  0002-fhir-canonical-data-model.md  0003-monorepo-project-structure.md  0004-human-in-the-loop-clinical-ai.md  0005-doltgresql-versioned-clinical-data.md  1001-doltgresql-versioned-clinical-data.md  2001-polyglot-aspire-orchestration.md  2002-fhir-canonical-data-model.md  2003-monorepo-project-structure.md  2004-human-in-the-loop-clinical-ai.md  2005-multi-standard-schema.md
docs/ai-governance/: ai-rmf.md  bias-audit.md  consent-architecture.md  model-card.md  sdoh-rationale.md
docs/architecture/: data-lineage.md  threat-model.md
docs/compliance/: hipaa-security-controls.md
docs/diagrams/: architecture.d2  cgm-ingest-sequence.md  fhir-ingest-sequence.md
research/healthcare-compliance/: 01-federal-regulations.md  02-security-certifications.md  03-ai-ml-regulations.md  04-data-standards.md  05-emerging-standards.md  README.md
src/Acme.Stack.Core/: Class1.cs  Models.cs
src/Acme.Stack.DataApi/: Acme.Stack.DataApi.csproj  Acme.Stack.DataApi.http  Program.cs
src/Acme.Stack.FhirIngest/: Acme.Stack.FhirIngest.csproj  Acme.Stack.FhirIngest.http  Program.cs
src/services/clinical-extractor/: main.py  pyproject.toml
src/services/wearable-normalizer/: main.py  pyproject.toml
src/services/wearable-normalizer/tests/: conftest.py  test_ingest_endpoint.py  test_parse_cgm.py
src/services/wearable-normalizer/tests/fixtures/: malformed.csv  mixed_tz.csv  sample.csv
(+11 files in other folders)
