[project]
name = "wearable-normalizer"
version = "0.1.0"
description = "Normalizes wearable device data (CGM, heart rate, activity)"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "psycopg[binary]>=3.2.0",
    "pandas>=2.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring a live DoltgreSQL connection",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
